--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <body>
 
-    <header><strong>Discord Wiki</strong> Entairnment - Web Site
+    <header><strong>Discord Wiki</strong> - Web Site
         <br>
         Welcome
     </header>
@@ -146,7 +146,7 @@
     </section>
 
     <footer>
-        <strong>Discord Wiki Compagny</strong>
+        <strong>Discord Wiki Compagny - By @Enyss</strong>
         <br>
         This Web Site is not affiliated with <strong>Discord©</strong>
         <br> <br> <br>
